--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -86,6 +86,11 @@ jobs:
           echo "$HOME/.bun/bin" >> $GITHUB_PATH
           bd init
 
+      - name: Setup git identity
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Create feature branch
         id: branch
         run: |
