fix: configure beads sync-branch to beads-db in plan workflow
The workflow was running 'bd init' which created a fresh config without
the sync-branch setting. This caused 'bd sync' to commit to main instead
of beads-db, making tasks appear empty.

--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -84,7 +84,10 @@ jobs:
           echo "$HOME/.local/bin" >> $GITHUB_PATH
           curl -fsSL https://bun.sh/install | bash
           echo "$HOME/.bun/bin" >> $GITHUB_PATH
+          # Initialize beads with correct sync branch
           bd init
+          # Ensure config uses beads-db branch for sync
+          sed -i 's/^# sync-branch:.*/sync-branch: "beads-db"/' .beads/config.yaml || echo 'sync-branch: "beads-db"' >> .beads/config.yaml
 
       - name: Setup git identity
         run: |
