--- a/.github/workflows/opencode-workers.yml
+++ b/.github/workflows/opencode-workers.yml
@@ -69,7 +69,7 @@ jobs:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
         run: |
           bun run .github/scripts/opencode-run.ts \
-            --model "anthropic/claude-sonnet-4-20250514" \
+            --model "opencode/big-pickle" \
             --prompt "Implement task: ${{ matrix.task.title || matrix.task.summary }}
 
           Task ID: ${{ matrix.task.id }}
